# outto

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  build-installer.ps1  outto.macos.toml
.config/: nextest.toml
cli/: Cargo.toml
cli/src/: main.rs  pe.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  callbacks.rs  lib.rs
crates/core/src/actions/: dirs.rs  files.rs  mod.rs  prerequisites.rs  run.rs  signing.rs
crates/core/src/config/: mod.rs  paths.rs  types.rs  validate.rs
crates/core/src/manifest/: mod.rs  rollback.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  bridge.rs  cli.rs  glass.rs  layout.rs  main.rs  native_buttons.rs  payload.rs  pe.rs  sidebar.rs  theme.rs
crates/gui/src/screens/: components.rs  license.rs  progress.rs  summary.rs  uninstall_confirm.rs  welcome.rs
crates/macos/: Cargo.toml
crates/macos/src/: detect.rs  elevation.rs  lib.rs  macho.rs  manifest.rs  paths.rs  test_util.rs  uninstall.rs
crates/macos/src/actions/: environment.rs  files_ext.rs  fonts.rs  launchd.rs  mod.rs  plist.rs  symlinks.rs
crates/macos/src/config/: mod.rs  types.rs
crates/sfx/: Cargo.toml
crates/sfx-macos/: Cargo.toml
crates/sfx-macos/src/: main.rs
crates/sfx/src/: main.rs
crates/uninstall/: Cargo.toml
crates/uninstall/src/: app.rs  bridge.rs  main.rs  theme.rs
crates/windows/: Cargo.toml
crates/windows/src/: detect.rs  elevation.rs  lib.rs  manifest.rs  paths.rs  pe.rs  uninstall.rs
crates/windows/src/actions/: associations.rs  com.rs  dirs.rs  environment.rs  fonts.rs  mod.rs  registry.rs  services.rs  shortcuts.rs
crates/windows/tests/: admin_integration.rs  windows_integration.rs
examples/: macos-minimal.toml  outto.macos.toml  outto.toml  sapi-engine.toml  sapi-text-processors.toml  sapi-tts-model.toml  sapi-voices.toml
gui/: Cargo.toml  build.rs
gui/src/: app.rs  bridge.rs  cli.rs  main.rs  payload.rs  pe.rs  theme.rs
gui/src/screens/: complete.rs  components.rs  directory.rs  license.rs  mod.rs  progress.rs  summary.rs  uninstall_complete.rs  uninstall_confirm.rs  uninstall_progress.rs  welcome.rs
scripts/: build-release.ps1  build-release.sh  sign-necessary.ps1  test-admin.ps1
sfx/: Cargo.toml
sfx/src/: main.rs
src/: detect.rs  elevation.rs  error.rs  lib.rs  pe.rs  uninstall.rs
src/actions/: associations.rs  com.rs  dirs.rs  environment.rs  files.rs  fonts.rs  mod.rs  prerequisites.rs  registry.rs  run.rs  services.rs  shortcuts.rs  signing.rs
src/config/: mod.rs  paths.rs  types.rs  validate.rs
src/manifest/: mod.rs  rollback.rs
tests/: admin_integration.rs  windows_integration.rs
uninstall/: Cargo.toml
uninstall/src/: app.rs  bridge.rs  main.rs  theme.rs
