cargo-features = ["panic-immediate-abort"]

[workspace]
members = [
    "crates/core",
    "crates/windows",
    "crates/macos",
    "crates/cli",
    "crates/gui",
    "crates/sfx",
    "crates/sfx-macos",
    "crates/uninstall",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "immediate-abort"
