cargo-features = ["panic-immediate-abort"]

[workspace]
members = [
    "crates/core",
    "crates/windows",
    "crates/macos",
    "crates/cli",
    "crates/gui",
    "crates/sfx",
    "crates/sfx-macos",
    "crates/uninstall",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal
outto-core = { path = "crates/core" }
outto-windows = { path = "crates/windows" }
outto-macos = { path = "crates/macos" }

# external
blake3 = "1.8.3"
box-format = { git = "https://github.com/bbqsrc/box", default-features = false, features = ["std", "zstd", "reader"] }
dunce = "1"
glob = "0.3"
iced = { version = "0.14", default-features = false, features = ["tokio", "tiny-skia"] }
libc = "0.2"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSView",
    "NSWindow",
    "NSVisualEffectView",
    "NSResponder",
    "NSColor",
    "NSControl",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSBezierPath",
] }
objc2-foundation = { version = "0.2", features = ["NSThread", "NSString", "NSGeometry"] }
plist = "1"
raw-window-handle = "0.6"
rfd = "0.15"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.8"
walkdir = "2"
windows-sys = "0.61"
winres = "0.1"
zstd = { version = "0.13", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "immediate-abort"

# We vendor iced and cosmic-text so we can fix the variable-font bold
# rendering bug that affects SFNS.ttf on macOS. See plan file + vendor/*.
[patch.crates-io]
cosmic-text = { path = "vendor/cosmic-text" }
iced = { path = "vendor/iced" }
iced_core = { path = "vendor/iced/core" }
iced_debug = { path = "vendor/iced/debug" }
iced_futures = { path = "vendor/iced/futures" }
iced_graphics = { path = "vendor/iced/graphics" }
iced_program = { path = "vendor/iced/program" }
iced_renderer = { path = "vendor/iced/renderer" }
iced_runtime = { path = "vendor/iced/runtime" }
iced_tiny_skia = { path = "vendor/iced/tiny_skia" }
iced_widget = { path = "vendor/iced/widget" }
iced_winit = { path = "vendor/iced/winit" }
softbuffer = { path = "vendor/softbuffer" }
