[package]
name = "outto-cli"
version = "0.1.0"
edition = "2021"
description = "Build tool for creating outto installers"
license = "MIT"

[[bin]]
name = "outto"
path = "src/main.rs"

[dependencies]
outto-core = { path = "../core" }
box-format = { path = "../../../box", default-features = false, features = ["std", "zstd", "reader", "writer"] }
tempfile = "3"
walkdir = "2"
zstd = { version = "0.13", default-features = false }

[target.'cfg(windows)'.dependencies]
outto-windows = { path = "../windows" }

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos = { path = "../macos" }
tar = "0.4"
