[package]
name = "outto-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build tool for creating outto installers"

[[bin]]
name = "outto"
path = "src/main.rs"

[dependencies]
outto-core.workspace = true
box-format = { workspace = true, features = ["writer"] }
tempfile.workspace = true
walkdir.workspace = true
zstd.workspace = true

[target.'cfg(windows)'.dependencies]
outto-windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos.workspace = true
tar.workspace = true
