[package]
name = "outto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-neutral framework shared by outto's per-OS installer backends"

[dependencies]
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
semver.workspace = true
glob.workspace = true
blake3.workspace = true
dunce.workspace = true
box-format = { workspace = true, features = ["writer"] }
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
] }
