[package]
name = "outto-gui"
version = "0.1.0"
edition = "2021"
description = "Iced-based installer GUI for outto"
license = "MIT"

[dependencies]
outto-core = { path = "../core" }
iced = { version = "0.14", default-features = false, features = ["tokio", "tiny-skia"] }
serde_json = "1"
rfd = "0.15"
box-format = { path = "../../../box", default-features = false, features = ["std", "zstd", "reader"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
outto-windows = { path = "../windows" }
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos = { path = "../macos" }
# Keep box-format available on macOS too for payload extraction in the GUI.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSThread", "NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.2", features = [
    "NSView",
    "NSWindow",
    "NSVisualEffectView",
    "NSResponder",
    "NSColor",
    "NSControl",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSBezierPath",
] }
raw-window-handle = "0.6"

[build-dependencies]
winres = "0.1"
