[package]
name = "outto-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Iced-based installer GUI for outto"

[dependencies]
outto-core.workspace = true
iced.workspace = true
serde_json.workspace = true
rfd.workspace = true
box-format.workspace = true
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
outto-windows.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos.workspace = true
# Keep box-format available on macOS too for payload extraction in the GUI.
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
raw-window-handle.workspace = true

[build-dependencies]
winres.workspace = true
