[package]
name = "outto-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS backend for the outto installer framework (stub — not yet implemented)"

[target.'cfg(target_os = "macos")'.dependencies]
outto-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
semver.workspace = true
plist.workspace = true
libc.workspace = true
# Reads and writes Mach-O headers at the byte level (no runtime dep; we hand-parse).
