[package]
name = "outto-sfx-macos"
version = "0.1.0"
edition = "2021"
description = "Mach-O self-extractor stub for compressed outto .app installers"
license = "MIT"

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos = { path = "../macos" }
zstd = { version = "0.13", default-features = false }
tar = "0.4"
libc = "0.2"
