[package]
name = "outto-sfx-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mach-O self-extractor stub for compressed outto .app installers"

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos.workspace = true
zstd.workspace = true
tar.workspace = true
libc.workspace = true
