[package]
name = "outto-sfx"
version = "0.1.0"
edition = "2021"
description = "Minimal self-extracting stub for compressed outto installers"
license = "MIT"

[dependencies]
zstd = { version = "0.13", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }

[build-dependencies]
winres = "0.1"
