[package]
name = "outto-sfx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal self-extracting stub for compressed outto installers"

[dependencies]
zstd.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }

[build-dependencies]
winres.workspace = true
