[package]
name = "outto-uninstall"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uninstaller GUI for outto"

[dependencies]
outto-core.workspace = true
iced.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
outto-windows.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
outto-macos.workspace = true
tempfile.workspace = true

[build-dependencies]
winres.workspace = true
