[package]
name = "outto-windows"
version = "0.1.0"
edition = "2021"
description = "Windows backend for the outto installer framework"
license = "MIT"

[target.'cfg(windows)'.dependencies]
outto-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_System_Shutdown",
    "Win32_System_RestartManager",
    "Win32_System_IO",
] }
