[package]
name = "outto-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows backend for the outto installer framework"

[target.'cfg(windows)'.dependencies]
outto-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_System_Shutdown",
    "Win32_System_RestartManager",
    "Win32_System_IO",
] }
